all services working